updated css and js icons when clicked

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <div class="chatbox__header">
                 Chat support!
             </div>
-            <div class="messages">
-                <div class="messages__item--visitor">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas necessitatibus dolor ullam dicta fugiat sunt laudantium sit inventore architecto voluptatum, officia, odio ratione similique. Dolorem, nesciunt placeat illo aperiam ex est maiores! Possimus, odit maxime. Quia pariatur necessitatibus aliquam suscipit, dolor repellat mollitia laudantium blanditiis, assumenda provident, odit reprehenderit quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum necessitatibus ut porro consequuntur laborum sit. Repellendus libero, aliquid sequi ea quos, aut tempore pariatur architecto facilis explicabo, saepe tenetur cum incidunt minus ad natus praesentium porro voluptate! Aspernatur dolorum suscipit aliquam quas, ab earum veniam, aperiam molestiae, vitae deleniti labore?
+            <div class="chatbox__messages">
+                <div class="messages__item messages__item--visitor">
+                    Hi!
                 </div>
-                <div class="messages__item--operator">
+                <div class="messages__item messages__item--operator">
                     What is it?
                 </div>
-                .<div class="messages__item--typing">
+                .<div class="messages__item messages__item--typing">
                     <span class="messages__dot"></span>
                     <span class="messages__dot"></span>
                     <span class="messages__dot"></span>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="chatbox__button">
-            <button>I'm a button!</button>
+            <button>Dummy Text</button>
         </div>
     </div>
     
